@@ -235,28 +235,20 @@ can be used to set a heading for the subsection that is different from <A>name</
 
 <Subsection Label="@BeginAutoDoc">
 <Index Key="@BeginAutoDoc"><C>@BeginAutoDoc</C></Index>
-<Heading><C>@BeginAutoDoc</C></Heading>
-Causes all subsequent declarations to be documented in the manual,
-regardless of whether they have an &AutoDoc; comment in front of
-them or not.
-</Subsection>
-
-<Subsection Label="@EndAutoDoc">
 <Index Key="@EndAutoDoc"><C>@EndAutoDoc</C></Index>
-<Heading><C>@EndAutoDoc</C></Heading>
-Ends the effect of <C>@BeginAutoDoc</C>. So from here on, again only declarations
-with an explicit &AutoDoc; comment in front are added to the manual.
-
+<Heading><C>@BeginAutoDoc</C> and <C>@EndAutoDoc</C></Heading>
+<Emph>These commands are deprecated.</Emph>
+Please do not use them. Instead, it suffices to prepend each declaration
+that is meant to be appear in the manual with a minimal &AutoDoc; comment
+<C>#!</C>:
 <Listing><![CDATA[
-#! @BeginAutoDoc
-
+#!
 DeclareOperation( "Operation1", [ IsList ] );
 
+#!
 DeclareProperty( "IsProperty", IsList );
-
-#! @EndAutoDoc
 ]]></Listing>
-Both, <C>Operation1</C> and <C>IsProperty</C> would appear in the manual.
+In this example, both <C>Operation1</C> and <C>IsProperty</C> would appear in the manual.
 </Subsection>
 
 <Subsection Label="@BeginGroup">
